# RoboTraceSim

./: Cargo.toml  README.md  spec.txt
RobotAssets/Batteries/: 2s_lipo_7400mv.json
RobotAssets/Drivers/: pwm_hbridge.json
RobotAssets/Fans/: downforce_fan.json
RobotAssets/LineSensors/: line_sensor_16.json
RobotAssets/Motors/: n20_simple_left.json  n20_simple_right.json
RobotAssets/Tires/: default_tire.json
SurfaceProfiles/: robotrace official.json
Tracks/: Track Geometry Foundation Demo.json
docs/: v0.1-status.md  v0.2-status.md  v0.3-status.md  v0.4-status.md  v0.5-status.md  v0.6-track-geometry-foundation.md
examples/basic/: projeto.rtsim  projeto_suction.rtsim  real_log_demo.csv  resultado.csv  robot.json  robot_suction.json  track.json
examples/profiles/: custom_training.json
src/: battery.rs  calibration.rs  cli.rs  config.rs  controller.rs  encoder.rs  gyro.rs  json.rs  main.rs  math.rs  motor.rs  normal_force.rs  replay.rs  rng.rs  rtsim_track.rs  sensor.rs  sim.rs  telemetry.rs  track.json  track.rs  ui.rs  wheel.rs
