[package]
name = "robotrace-sim"
version = "0.6.0"
edition = "2021"
description = "Robotrace Sim v0.08 with parametric closed track geometry and validation"
license = "MIT"

[features]
default = ["gui"]
gui = ["dep:eframe"]

[dependencies]
eframe = { version = "0.27", optional = true }
rfd = "0.17.2"
